# Spreadsheet

./: .gitignore  AbstractObserver.h  AbstractSubject.h  CMakeLists.txt  Cell.cpp  Cell.h  Formulas.cpp  Formulas.h  Max.cpp  Max.h  MaxColumn.cpp  MaxColumn.h  Mean.cpp  Mean.h  MeanColumn.cpp  MeanColumn.h  Min.cpp  Min.h  MinColumn.cpp  MinColumn.h  OperationColumn.cpp  OperationColumn.h  Sum.cpp  Sum.h  SumColumn.cpp  SumColumn.h  main.cpp
Test/: CMakeLists.txt  MaxColumnTest.cpp  MeanColumnTest.cpp  MinColumnTest.cpp  SumColumnTest.cpp
Test/lib/googletest-release-1.11.0/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_for_dummies.md  primer.md
Test/lib/googletest-release-1.11.0/docs/reference/: matchers.md  mocking.md  testing.md
Test/lib/googletest-release-1.11.0/googlemock/src/: gmock-spec-builders.cc
Test/lib/googletest-release-1.11.0/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc
Test/lib/googletest-release-1.11.0/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
Test/lib/googletest-release-1.11.0/googletest/test/: googletest-death-test-test.cc  googletest-options-test.cc  googletest-output-test_.cc  googletest-param-test-test.cc  googletest-port-test.cc  googletest-printers-test.cc  gtest-typed-test_test.cc  gtest-unittest-api_test.cc  gtest_list_output_unittest_.cc  gtest_unittest.cc  gtest_xml_output_unittest_.cc
UnitTesting/: CMakeLists.txt
(+15 files in other folders)
